<resources>
    <!-- titolo app -->
    <string name="app_name">E_School</string>

    <!-- titoli sezioni -->
    <string name="title_activity_homeDocente">Home</string>
    <string name="title_activity_homeClasse">Home classe</string>
    <string name="title_activity_datiAlunno">Informazioni alunno</string>
    <string name="title_activity_homeAlunno">Benvenuto nella tua home</string>
    <string name="title_activity_registrazione">Registrazione</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- utenti -->
    <string name="docente">Docente</string>
    <string name="alunno">Alunno</string>

    <!-- livelli -->
    <string name="prima">Prima</string>
    <string name="seconda">Seconda</string>
    <string name="terza">Terza</string>
    <string name="quarta">Quarta</string>
    <string name="quinta">Quinta</string>

    <!-- titoli sezioni form -->
    <string name="datiAlunno">Dati alunno</string>
    <string name="infoDocenza">Seleziona le materie e le classi</string>
    <string name="infoAlunno">Informazioni alunno</string>
    <string name="infoGenerali">Informazioni generali</string>
    <string name="infoAccesso">Informazioni per l\'accesso al sistema</string>
    <string name="infoClasse">Informazioni classe</string>
    <string name="infoAndamento">Informazioni andamento</string>

    <!-- form  -->
    <string name="cf">Codice fiscale*</string>
    <string name="nome">Nome*</string>
    <string name="cognome">Cognome*</string>
    <string name="dataNascita">Data di nascita*</string>
    <string name="luogoNascita">Luogo di nascita*</string>
    <string name="residenza">Residenza*</string>
    <string name="email">E-mail*</string>
    <string name="telefono">Numero di telefono*</string>
    <string name="Cellulare">Cellulare*</string>
    <string name="opzDsa">DSA</string>
    <string name="matricola">Matricola*</string>
    <string name="passwordTxt">Password*</string>
    <string name="confermaPsw">Conferma password*</string>
    <string name="classePrima">1</string>
    <string name="incrementa">+</string>
    <string name="decrementa">-</string>


    <!-- form  -->
    <string name="username">Username*</string>
    <string name="pswAlunno">Password</string>

    <!-- messaggi di errore o informativi -->
    <string name="benvenuto">Benvenuto </string>
    <string name="infoMatricola">N.B. La matricola verrà usata come username al momento dell\'accesso al sistema.</string>
    <string name="erroreCorrispondenza">Le password non corrispondono.</string>
    <string name="erroreCampiVuoti">*E\' obbligatorio compilare tutti i campi.</string>
    <string name="infoElenco">Seleziona l\'alunno per visualizzarne i dati.</string>
    <string name="infoProgramma">Seleziona l\'argomento per visualizzare esercizi e teoria associati.</string>
    <string name="newEs">Carica/crea esercizi</string>
    <string name="caricaFile">Carica file di teoria:</string>
    <string name="infoEsercizi">Seleziona l\'esercizio per visualizzarlo.</string>
    <string name="infoTeoria">Seleziona l\'argomento di teoria per visualizzarlo.</string>

    <!-- button -->
    <string name="ok">ok</string>
    <string name="conferma">Conferma</string>
    <string name="accedi">Accedi</string>
    <string name="modifica">Modifica</string>
    <string name="regitrazione">Registrati</string>
    <string name="fine">Fine</string>
    <string name="logout">Logout</string>
    <string name="homeClasse">Vai a home classe</string>
    <string name="nuovoAlunno">Nuovo alunno</string>
    <string name="opzioniDSA">Opzioni DSA</string>
    <string name="annulla">Annulla</string>
    <string name="btCaricaFile">Scegli file</string>
    <string name="aperte">Domande aperte</string>
    <string name="multiple">Risposte multiple</string>
    <string name="file">Carica file</string>

    <!-- sezione diagnostica -->
    <string name="parteDiagnostica">Parte diagnostica</string>
    <string name="sezioneTest">Test</string>
    <string name="testDiagnostico">Test diagnostico (cartaceo)</string>
    <string name="testDiagnosticoErrori">Test errori da compilare</string>
    <string name="listaErrori">Lista test errori</string>
    <string name="schedeLetture">Schede/letture</string>
    <string name="livello1">Livello 1</string>
    <string name="livello2">Livello 2</string>
    <string name="livello3">Livello 3</string>

    <!-- nomi sezioni -->
    <string name="registro">Registro</string>
    <string name="aggungiClasse">Aggiungi classe</string>
    <string name="home">Home principale</string>

    <!-- sezione login -->
    <string name="pswdimenticata"><a href="https://stackoverflow.com/questions/9204303/android-is-it-possible-to-add-a-clickable-link-into-a-string-resource">Password dimeticata?</a></string>
    <string name="registraDocente"><a href="https://stackoverflow.com/questions/9204303/android-is-it-possible-to-add-a-clickable-link-into-a-string-resource">Sei un nuovo docente? Registrati.</a></string>
    <string name="ricordami">Ricordami</string>

    <!-- sezione registro -->
    <string name="nomeCognome">Nome e cognome</string>
    <string name="data">Data</string>
    <string name="descrizione">Descrizione</string>
    <string name="voto">Valutazione</string>
    <string name="scegliAl">Scegli alunno:</string>
    <string name="assenza">assente</string>

    <!-- sezione login -->
    <string name="teoria">Lezioni di teoria</string>
    <string name="esercizi">Esercizi</string>

    <string name="livello">Scegli la classe che frequenti</string>
    <string name="listaClassi">Elenco classi</string>
    <string name="materie">Lista materie</string>
    <string name="scegliClasse">Scegli livello</string>
    <string name="elencoClasse">Elenco classi</string>
    <string name="programma">Programma</string>
    <string name="inserisci">Inserisci...</string>
    <string name="classe">Classe*</string>
    <string name="sezione">Sezione*</string>
    <string name="informazioni">Informazioni</string>
    <string name="impostazioni">Impostazioni</string>

    <!-- sezione alunno -->
    <string name="sezioneEs">Sezione esercizi:</string>
    <string name="eserciziCorretti">Esercizi corretti</string>
    <string name="eserciziAssegnati">Esercizi asseganti</string>
    <string name="studiamoInsieme">Studiamo insieme:</string>
    <string name="sintesivocale">Sintetizzatore</string>
    <string name="calcolatrice">Calcolatrice</string>
    <string name="label_speech_speed">Velocità di riproduzione</string>





    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
