<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".docente.Docente_SezioneDiagnosticaFragment">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/linearSezDiagnostica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/marginetop"
        android:layout_marginLeft="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sezioneTest"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/txTestDiagnostico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/testDiagnostico"
            android:clickable="true"/>

        <TextView
            android:id="@+id/txTestDiagnosticoErrori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/testDiagnosticoErrori"
            android:clickable="true"/>

        <TextView
            android:id="@+id/txListaErrori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listaErrori"
            android:clickable="true"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearSezTest"
        android:layout_toRightOf="@id/linearSezDiagnostica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/marginetop">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedeLetture"
            android:textAllCaps="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/livello1"
            android:clickable="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/livello2"
            android:clickable="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/livello3"
            android:clickable="true"/>

    </LinearLayout>
</RelativeLayout>

</FrameLayout>
